Added controller